		Adding fake/skeleton Dreamcast ROM SYSINFO_INIT, SYSINFO_ID,
		FLASHROM_INIT, and FLASHROM_READ calls.
20110616	Adding Dreamcast devices as symbols, so that runtime debugging
		will show meaningful names instead of just addresses, when
		reading and writing device registers.
20110621	Adding "trace" versions of SuperH bsr and bsrf_rn instructions.
		Adding the first SuperH instruction combination for speeding
		up a variable read loop (bt_samepage_wait_for_variable).
20110622	Continuing on Dreamcast and SuperH emulation: the SH4 DMA
		channel numbers were off-by-one (but didn't really have any
		negative effect). Experimenting with end-of-DMA mechanism in
		dev_pvr. Adding a second device thing at 0x005f7c00, which
		seems to be a PVR DMA register range, but not much used?
20110623	Found a bug in the SH4 fsca instruction: the angle argument for
		sin and cos was incorrectly calculated. "dcfighting.bin" and
		"gltest.bin" (two "homebrew" Dreamcast programs) now look much
		more like on the real Dreamcast.
		Various other small Dreamcast and/or SH4 related updates.
20110624	Updating OpenBSD/landisk installation instructions: 4.8 -> 4.9.
20110626	Moving Dreamcast BIOS emulation entry points to 0x8c000100+ofs,
		so they are not "in the way" of the real BIOS' data area at
		0x8c000000-0x8c0000ff. Some other minor Dreamcast fixes.
		Moving GDROM DMA register handling into dev_dreamcast_gdrom.
		Fixing a bug in the SH4 fipr instruction (inner product): the
		rm and rn registers were reversed!
		Implementing fmov_rm_frn for double-sized register access.
20110702	dev_ram now has a "trace" flag. Useful for figuring out e.g.
		when/if a program accesses certain memory ranges.
		Continuing on Dreamcast PVR (graphics) emulation; implementing
		software triangle rendering, so that some demo programs (such
		as Comstedt's "tatest", KOS' "gltest.bin" and "dcfighting.bin")
		now render solid polygons. Color is random though, and no
		textures yet.
